--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -17,16 +17,18 @@ footer {
     font-size: 12px;
   }
   
-  .yellow-back {
-    background-color: #D0B44A;
-  }
+#imageBackground {
+  background-image: url(../imgs/main/image-1.jpg);
+  background-repeat: no-repeat;
+  width: fit-content;
+}
   
   .album-cover {
     width: 25%;
   }
   
   .album-title {
-    font-size: 5rem;
+    font-size: 4.0rem;
   }
   
   .imgPlayer {
