--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,7 +17,45 @@
   ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+  
+  /* MAIN SECTION INDEX PAGE */
 
+.card {
+  border: none;
+}
+
+.card-title {
+  font-size: 14px;
+}
+
+.card-body {
+  padding: 10px;
+}
+
+.playlist-container {
+  width: 75px; 
+  height: 75px; 
+}
+
+.playlist-grids {
+  width: 100%; 
+  height: 100%; 
+}
+
+.image-item {
+  width: 50%; 
+  height: 50%; 
+  object-fit: cover; 
+}
+
+.full-image {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+}
+
+
+/* FOOTER INDEX PAGE  */
   footer {
     height: 90px !important;
     position: fixed !important;
@@ -57,20 +95,32 @@
     height: 4px !important;
     border-radius: 50px;
   }
-  
-  ::-webkit-scrollbar {
-    width: 10px;
+
+  /* BUTTON HEAD PARTE CENTRALE  */
+  #button-after, #button-before {
+    background-color: #141414 !important;
+    color: white;
+    border: none;
+    font-size: 1.4em;
   }
-  
-  ::-webkit-scrollbar-track {
-    background: #000000;
+
+  /* LOGO PROFILO OPTION  */
+  #dropdownMenuButton1 {
+    background-color: #0A0A0A;
+    border: none;
+    padding: 2px 0;
   }
-  
-  
-  ::-webkit-scrollbar-thumb {
-    background: #888;
+
+  /* ICONE DEL MENU FRIENDS A SCOMPARSA */
+  .icon-friend-list {
+    font-size: 1.7em;
   }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+/* CARDS DEL MENU FRIENDS A SCOMPARSA */
+  #cards-friend {
+    font-size: 70%;
   }
+
+  .img-cards-friend {
+    width: 80%;
+  }
+
