--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,7 @@
+* {
+  font-family: circular, sans-serif;
+}
+
 /* SCROLL BAR */
 ::-webkit-scrollbar {
     width: 10px;
@@ -20,8 +24,38 @@
   
   /* MAIN SECTION INDEX PAGE */
 
+  .gradient-bg {
+    background: linear-gradient(to top, #121212, #212121);
+  }
+
+.btn-success{
+  background-color: #1ED760 !important;
+}
+
+.gradient-bg-ads {
+  background: linear-gradient(to right top, black, #212121);
+}
+
+/* Buonasera Section */
+.box-hero {
+  background-color: #2C2C2C;
+}
+
+.playlist-container {
+  width: 100px; 
+  height: 100px; 
+}
+
+.image-item {
+  width: 50%; 
+  height: 50%; 
+  object-fit: cover; 
+}
+
+/* CARDS INDEX PAGE */
 .card {
   border: none;
+  background-color: #181818;
 }
 
 .card-title {
@@ -30,23 +64,10 @@
 
 .card-body {
   padding: 10px;
+  
 }
 
-.playlist-container {
-  width: 75px; 
-  height: 75px; 
-}
 
-.playlist-grids {
-  width: 100%; 
-  height: 100%; 
-}
-
-.image-item {
-  width: 50%; 
-  height: 50%; 
-  object-fit: cover; 
-}
 
 .full-image {
   width: 100%; 
@@ -61,6 +82,7 @@
     position: fixed !important;
     bottom: 0px;
     width: 100%;
+    background-color: #121212;
   }
   
   .fixedSize {
