--- a/assets/css/album.css
+++ b/assets/css/album.css
@@ -1,4 +1,4 @@
-footer {
+/*footer {
   height: 90px !important;
   position: fixed !important;
   bottom: 0px;
@@ -57,4 +57,7 @@ footer {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
+}*/
+
+
+
