--- a/assets/css/album.css
+++ b/assets/css/album.css
@@ -59,5 +59,203 @@
   background: #555;
 }*/
 
+* {
+  font-family: circular, sans-serif;
+}
+
+/* SCROLL BAR */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #000000; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+  
+  /* MAIN SECTION INDEX PAGE */
+
+  .gradient-bg {
+    background: linear-gradient(to top, #121212, #212121);
+  }
+
+.btn-success{
+  background-color: #1ED760 !important;
+}
+
+.gradient-bg-ads {
+  background: linear-gradient(to right top, black, #212121);
+}
+
+/* Buonasera Section */
+.box-hero {
+  background-color: #2C2C2C;
+}
+
+.playlist-container {
+  width: 100px; 
+  height: 100px; 
+}
+
+.image-item {
+  width: 50%; 
+  height: 50%; 
+  object-fit: cover; 
+}
+
+/* CARDS INDEX PAGE */
+.card {
+  border: none;
+  background-color: #181818;
+}
+
+.card-title {
+  font-size: 14px;
+}
+
+.card-body {
+  padding: 10px;
+  
+}
+
+
+
+.full-image {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+}
+
+
+/* FOOTER INDEX PAGE  */
+  footer {
+    height: 90px !important;
+    position: fixed !important;
+    bottom: 0px;
+    width: 100%;
+    background-color: #121212;
+  }
+  
+  .fixedSize {
+    height: 130px !important;
+  }
+  
+  .imageUser {
+    width: 30px;
+  }
+  
+  .userName {
+    font-size: 12px;
+  }
+  
+  .yellow-back {
+    background-color: #D0B44A;
+  }
+  
+  .album-cover {
+    width: 25%;
+  }
+  
+  .album-title {
+    font-size: 5rem;
+  }
+  
+  .imgPlayer {
+    width: 75px;
+  }
+  
+  .barWhite {
+    height: 4px !important;
+    border-radius: 50px;
+  }
+
+  /* BUTTON HEAD PARTE CENTRALE  */
+  #button-after, #button-before {
+    background-color: #141414 !important;
+    color: white;
+    border: none;
+    font-size: 1.4em;
+  }
+
+  /* LOGO PROFILO OPTION  */
+  #dropdownMenuButton1 {
+    background-color: #0A0A0A;
+    border: none;
+    padding: 2px 0;
+  }
+
+  /* ICONE DEL MENU FRIENDS A SCOMPARSA */
+  .icon-friend-list {
+    font-size: 1.7em;
+  }
+/* CARDS DEL MENU FRIENDS A SCOMPARSA */
+  #cards-friend {
+    font-size: 70%;
+  }
+
+  .img-cards-friend {
+    width: 80%;
+  }
+
+/* ------------------------------------------------------------- CSS PLAYER STYLING ------------------------------------------------  */
+.playpause-track, .prev-track, .next-track {
+  opacity: 0.8;
+
+  /* Smoothly transition the opacity */
+  transition: opacity .2s;
+}
+
+.playpause-track:hover, .prev-track:hover, .next-track:hover, .seek_slider:hover, .volume_slider:hover {
+  opacity: 1.0;
+}
+
+/* styling della linea */
+.seek_slider, .volume_slider {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 5px;
+  background: rgb(224, 12, 12);
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* styling del punto bianco riproduzione ( thumb ) */
+.seek_slider::-webkit-slider-thumb, .volume_slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: rgb(255, 255, 255);
+  cursor: pointer;
+  border-radius: 100%;
+}
+
+.seek_slider {  /* GRANDEZZA PLAYER LINEA */
+  width: 60%;
+}
+
+.volume_slider { /* GRANDEZZA VOLUME LINEA */
+  width: 60%;
+}
+
 
 
