--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,7 +4,8 @@
 
 nav {
   background-color: #282828;
- font-size: 2em;
+ font-size: 1.3em;
+ color: #B2B2B2;
 }
 
 /* STILE PER LA VISUALIZZAZIONE DI MODIFICA/ELIMINA PLAYLIST */
