--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -163,6 +163,14 @@ nav {
     padding: 2px 0;
   }
 
+  .dropdown-menu {
+    background-color: #212529;
+  }
+
+  .dropdown-menu a {
+    color: white;
+  }
+
   /* ICONE DEL MENU FRIENDS A SCOMPARSA */
   .icon-friend-list {
     font-size: 1.7em;
