--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -1,6 +1,11 @@
+* {
+  font-family: circular, sans-serif;
+}
+
 nav {
+  margin-top: 1em;
   background-color: #282828;
- font-size: 1.3em;
+ font-size: 1em;
  color: #B2B2B2;
 }
 
