--- a/assets/css/album.css
+++ b/assets/css/album.css
@@ -9,6 +9,39 @@ nav {
  color: #B2B2B2;
 }
 
+a.link-item {
+  text-decoration: none;
+  color: #B2B2B2;
+  margin-bottom: 1em;
+  display: inline-block;
+  padding-left: 1em;
+}
+
+a.link-item:hover {
+  background-color:  #333;
+  color: white;
+}
+
+nav p {
+  cursor: pointer;
+  padding-left: 1em;
+}
+
+
+nav p:hover {
+  background-color:  #333;
+  color: white;
+}
+
+li {
+  padding-left: 1em;
+}
+
+li:hover {
+  background-color: #333;
+  cursor: pointer;
+}
+
 /* BUTTON HEAD PARTE CENTRALE  */
 #button-after, #button-before {
   /* background-color: #141414 !important; */
@@ -58,13 +91,15 @@ nav {
     background: #555; 
   }
   
-  /* MAIN SECTION INDEX PAGE */
+  /* MAIN SECTION  PAGE */
 
-  /* .gradient-bg {
+  #main-section {
     background: linear-gradient(to top, #121212, #212121);
-  } */
+  }
 
-
+.song-row:hover {
+  background-color: #333;
+}
 
 /* FOOTER INDEX PAGE  */
   footer {
@@ -87,7 +122,10 @@ nav {
     font-size: 12px;
   }
   
-  
+  #main-section {
+    margin-bottom: 5vh;
+  }
+
   .album-cover {
     width: 25%;
   }
