--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,6 +9,41 @@ nav {
  color: #B2B2B2;
 }
 
+a.link-item {
+  text-decoration: none;
+  color: #B2B2B2;
+  margin-bottom: 1em;
+  display: inline-block;
+  padding-left: 1em;
+}
+
+a.link-item:hover {
+  background-color:  #333;
+  color: white;
+}
+
+nav p {
+  cursor: pointer;
+  padding-left: 1em;
+}
+
+
+nav p:hover {
+  background-color:  #333;
+  color: white;
+}
+
+li {
+  padding-left: 1em;
+}
+
+li:hover {
+  background-color: #333;
+  cursor: pointer;
+}
+
+
+
 /* STILE PER LA VISUALIZZAZIONE DI MODIFICA/ELIMINA PLAYLIST */
 .context-menu {
   position: absolute;
@@ -77,6 +112,11 @@ nav {
   background-color: #2C2C2C;
 }
 
+.box-hero:hover {
+  cursor: pointer;
+  background-color: #555;
+}
+
 .playlist-container {
   width: 100px; 
   height: 100px; 
@@ -92,6 +132,11 @@ nav {
 .card {
   border: none;
   background-color: #181818;
+}
+
+.card:hover {
+  background-color: #333;
+  cursor: pointer;
 }
 
 .card-title {
