--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -140,6 +140,10 @@ li:hover {
   border-radius: 50%;
 }
 
+#liked-img {
+  width: 75px;
+}
+
 /* SEZIONE BRANI POPOLARI */
 #songsList {
   display: grid;
