--- a/assets/css/album.css
+++ b/assets/css/album.css
@@ -3,43 +3,25 @@
 }
 
 nav {
-  margin-top: 1em;
   background-color: #282828;
- font-size: 1em;
- color: #B2B2B2;
-}
-
-a.link-item {
-  text-decoration: none;
   color: #B2B2B2;
-  margin-bottom: 1em;
-  display: inline-block;
-  padding-left: 1em;
 }
 
-a.link-item:hover {
-  background-color:  #333;
-  color: white;
+
+nav i {
+  font-size: 20px !important;
 }
 
-nav p {
+
+nav span {
+  font-size: 14px !important;
+  color: #B2B2B2 !important;
+}
+
+nav span:hover {
+  color: white !important;
   cursor: pointer;
-  padding-left: 1em;
-}
 
-
-nav p:hover {
-  background-color:  #333;
-  color: white;
-}
-
-li {
-  padding-left: 1em;
-}
-
-li:hover {
-  background-color: #333;
-  cursor: pointer;
 }
 
 /* BUTTON HEAD PARTE CENTRALE  */
@@ -71,6 +53,35 @@ li:hover {
   width: 80%;
 }
 
+/* STILE PER LA VISUALIZZAZIONE DI MODIFICA/ELIMINA PLAYLIST */
+.context-menu {
+  position: absolute;
+  background-color: #333;
+  border: 1px solid #555;
+  border-radius: 4px;
+  z-index: 1000;
+  width: 150px;
+}
+
+.context-menu div {
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+.context-menu div:hover {
+  background-color: #555;
+}
+
+/* MODALI */
+.modal-content {
+  border: none;
+}
+
+.modal-header, .modal-footer {
+  border: none;
+}
+
 /* SCROLL BAR */
 ::-webkit-scrollbar {
     width: 10px;
@@ -92,6 +103,7 @@ li:hover {
   }
   
   /* MAIN SECTION  PAGE */
+
 
   #main-section {
     background: linear-gradient(to top, #121212, #212121);
