--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -1,5 +1,5 @@
 * {
-  font-family: circular, sans-serif;
+font-family: 'Circular'!important;
 }
 
 nav {
@@ -62,6 +62,7 @@ li:hover {
 .icon-friend-list {
   font-size: 1.7em;
 }
+
 /* CARDS DEL MENU FRIENDS A SCOMPARSA */
 #cards-friend {
   font-size: 70%;
@@ -93,36 +94,44 @@ li:hover {
 }
 
 /* STILE PER LA VISUALIZZAZIONE DI MODIFICA/ELIMINA PLAYLIST */
+
+.playlist-font {
+  font-size: 14px;
+  font-weight: 300;
+}
 .context-menu {
-    position: absolute;
-    background-color: #333;
-    border: 1px solid #555;
-    border-radius: 4px;
-    z-index: 1000;
-    width: 150px;
-  }
-  
-  .context-menu div {
-    padding: 10px;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .context-menu div:hover {
-    background-color: #555;
-  }
+  position: absolute;
+  background-color: #333;
+  border: 1px solid #555;
+  border-radius: 4px;
+  z-index: 1000;
+  width: 150px;
+}
+
+.context-menu div {
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+.context-menu div:hover {
+  background-color: #555;
+}
 
 /* SEZIONE HERO */
 #imageBackground {
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 40vh;
-    background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 38vh;
+  background-position: 0% 25%;
 }
 
-.btn-success{
-    background-color: #1ED760 !important;
-  }
+#followButton {
+  font-size: 14px !important;
+}
+.btn-success {
+  background-color: #1ED760 !important;
+}
 
 .album-cover {
   width: 25%;
@@ -132,8 +141,12 @@ li:hover {
   width: 75px;
 }
 
-.gradient-bg{
-    background: linear-gradient(to top, #121212, #212121);
+.gradient-bg {
+  background: linear-gradient(to top, #121212, #212121);
+}
+
+#imgSm {
+  width: 300px;
 }
 
 #imgSm img {
